MMCPA-1814: Fixing alignment of crossell - images and title for PDP on tablet.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/slider/_sell.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/slider/_sell.scss
@@ -218,6 +218,7 @@
     font-size: 1.125rem;
     margin-#{$left}: 2.7rem;
     margin-bottom: 0.6rem;
+    padding-left: 0.5rem;
   }
 
   @include breakpoint($desktop) {
